--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -3,7 +3,8 @@
     "home": "Home",
     "about": "About",
     "services": "Services",
-    "contact": "Contact"
+    "contact": "Contact",
+    "team": "Team"
   },
 
   "header": {
