--- a/src/locales/fr/translation.json
+++ b/src/locales/fr/translation.json
@@ -3,7 +3,8 @@
     "home": "Accueil",
     "about": "À propos",
     "services": "Services",
-    "contact": "Contact"
+    "contact": "Contact",
+    "team": "Équipe"
   },
     "header": {
     "welcomeTitle": "Bienvenue chez Ter Maximum Ltd",
